# obs-ndi-framesync

./: CMakeLists.txt  README.md
data/locale/: en-US.ini
lib/ndi/: Processing.NDI.Advanced.h  Processing.NDI.Embedded.h  Processing.NDI.KVM.h
src/: obs-ndi-framesync-source.cpp  obs-ndi-framesync-source.hpp  obs-ndi-framesync.cpp  obs-ndi-framesync.hpp
